# mcp-cin7-meta

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  TESTING.md  pyproject.toml  render.yaml
cin7_meta/: __init__.py  server.py  server_http.py  server_stdio.py
cin7_meta/resources/: endpoints.py  invoke.py  issues.py
cin7_meta/spec/: cin7_v2.apib  cin7_v2.json
cin7_meta/utils/: cin7_client.py  errors.py  issue_reporter.py  logging.py  session_store.py  spec_loader.py  spec_parser.py  spec_search.py  validator.py
docs/: spec_refresh.md  tools.md
scripts/: refresh_spec.py
tests/: conftest.py  test_cin7_client.py  test_errors.py  test_get_api_endpoint_schema.py  test_http_server.py  test_invoke_api_endpoint.py  test_issue_reporter.py  test_list_api_endpoints.py  test_logging.py  test_report_issue.py  test_server.py  test_session_store.py  test_spec_loader.py  test_spec_parser.py  test_spec_search.py  test_validator.py
tests/fixtures/: mini_apib.py  mini_spec.py
