[project]
name = "mcp-cin7-meta"
version = "0.1.0"
description = "MCP server providing generic schema-walking access to the Cin7 Core REST API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tim Zenderman" }]
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.13.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "scalekit-sdk-python>=2.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cin7_meta"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
